# ROS_Learning

./: Notes1.md  Notes3.md  Notes4.md  README.md
MyNotes/: EE3305 Experiment 1_PID Control.md  EE3305 Experiment 2_Path Planning.md  EE3305 ROS-talker-listener-exercise.md  HowToCompile.drawio  Notes2.md
MyNotes/EE3305_PID_control/: EE3305 Experiment 1： PID Control.md
ee3305_TL/: CMakeLists.txt  package.xml
ee3305_TL/launch/: TL_launch.launch
ee3305_TL/src/: listener_node.cpp  talker_node.cpp
ee3305_path_plan_v2/: CMakeLists.txt  README.md  ee3305_path_plan_v2.kdev4  gazebo_error.txt  package.xml
ee3305_path_plan_v2/.kdev4/: ee3305_path_plan_v2.kdev4
ee3305_path_plan_v2/config/: config.yaml
ee3305_path_plan_v2/include/: PreDefine.hpp
ee3305_path_plan_v2/launch/: range_detect_node.launch  start_all_nodes.launch  turtlebot3_maze.launch
ee3305_path_plan_v2/src/: BotControl.cpp  PathPlan.cpp  RangeDetect.cpp  path_plan_node.cpp  range_detect_node.cpp
ee3305_path_planing/: CMakeLists.txt  ee3305_path_planing.kdev4  ee3305_path_planing.sublime-project  ee3305_path_planing.sublime-workspace  package.xml
ee3305_path_planing_bak/: README.md  ee3305_path_planing.kdev4  ee3305_path_planing.sublime-project  ee3305_path_planing.sublime-workspace
ee3305_pid_control/: CMakeLists.txt  ee3305_pid_control.sublime-project  ee3305_pid_control.sublime-workspace  package.xml  untitled.sublime-workspace
path_planing_example/: CMakeLists.txt  Instruction.txt  Readme.txt  melodic_test_1.sh  package.xml  project_init_world_1.sh  project_init_world_2.sh
path_planing_example/launch/: navigate.launch
path_planing_example/src/: camera_operations.cpp  navigator.cpp  path_planner.cpp  range_finder.cpp
(+29 files in other folders)
